# openbundestag

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  ROADMAP.md  VUE3_MIGRATION_PLAN.md  app.py  build_all.sh  build_zwischenrufe_only.sh  dev.sh  pyproject.toml  requirements.txt  run.py
.github/workflows/: codeql-analysis.yml  deploy-api.yml  deploy-web.yml  deploy.yml  keepalive.yml  tests.yml
.streamlit/: config.toml
api/: Dockerfile  README.md  main.py  requirements.txt
data/: legacy_overrides.json
deploy/hf/: Dockerfile  README.md
memory/: MEMORY.md  feedback_permissions.md
scripts/: gen_prefetch.py
src/: _pw_download.py  extract.py  load.py  match_legacy.py  queries.py  scrape_ministers.py  stammdaten.py  transform.py  zwischenrufe.py
tests/: conftest.py  test_classify_position.py  test_faction_normalize_sql.py  test_match_faction.py  test_split_name.py  test_xml_parsers.py
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  app.css  app.html  main.ts  router.ts  vite-env.d.ts
web/src/lib/: api.ts  events.json  format.ts  governments.json  i18n.svelte.ts  i18n.ts  party_shares.json  prefetch.json  prefetch.ts  stories.json  types.ts
web/src/lib/components/: CompareChart.svelte  CompareChart.vue  Counter.svelte  Counter.vue  Donut.svelte  Donut.vue  FilterPanel.svelte  FilterPanel.vue  HBars.svelte  HBars.vue  InterruptionMatrix.svelte  InterruptionMatrix.vue  (+24 more)
web/src/routes/: +layout.svelte  +page.svelte
web/src/views/: About.vue  Architecture.vue  Beifall.vue  Explore.vue  Home.vue  Zwischenrufe.vue
(+6 files in other folders)
