[project]
name = "openbundestag"
version = "0.1.0"
description = "OpenBundestag — explore word usage across German Bundestag plenary debates (DuckDB-backed)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "requests>=2.31",
    "click>=8.1",
    "huggingface_hub>=0.25",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "cachetools>=7.1.4",
    "httpx>=0.28.1",
    "hypothesis>=6.155.3",
    "playwright>=1.60.0",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
